# liteparse-php

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  composer.json  liteparse-php  phpstan.neon.dist  phpunit.xml.dist
.github/workflows/: ci.yml  code-style.yml  release.yml
examples/: common.php
examples/screenshot/: screenshot.php
examples/simple/: simple.php
include/: liteparse_php.h
rust/: Cargo.toml  build.rs  cbindgen.toml
rust/src/: error.rs  lib.rs  runtime.rs
rust/src/ffi/: complexity.rs  handles.rs  mod.rs  parser.rs  result.rs  screenshot.rs  search.rs  strings.rs
scripts/: build.sh  copy-pdfium.sh
src/LiteParse/: Config.php  ImageMode.php  LiteParse.php  LiteParseFfi.php  OutputFormat.php  ParseResult.php  Screenshot.php
src/LiteParse/Composer/: Platform.php
src/LiteParse/Console/: InstallCommand.php  NativeLibraryInstaller.php  UpdateCommand.php
src/LiteParse/Exception/: LiteParseException.php
tests/Integration/: FeaturesTest.php  LiteParseTest.php
tests/Unit/: NativeLibraryInstallerTest.php
